--- a/manuals/正式版入口.md
+++ b/manuals/正式版入口.md
@@ -14,8 +14,8 @@
 操作手册|100.代理商篇|在HugeVision-SCM进行代理商单据协同管理的方法<br>(代理商的订购申请、采购、收货、结算，代理商的库存管理，代理商SellOut管理)|[100.代理商篇](PNG/HugeVision-SCM操作手册-100.代理商篇/indexprivate.md)|
 操作手册|200.供应商篇|在HugeVision-SCM进行供应商单据协同管理的方法<br>(供应商的询价报价、供应商的销售、发货、结算，供应商的库存管理)|[200.供应商篇](PNG/HugeVision-SCM操作手册-200.供应商篇/indexprivate.md)|
 操作手册|900.API篇|在HugeVision-SCM维护API协同平台，管理跟踪API接口执行状态的方法|[900.API篇](PNG/HugeVision-SCM操作手册-900.API篇/indexprivate.md)|
-实施手册|00.实施说明篇|HugeVision-SCM实施导入的方法、流程和管理工具|[00.实施说明篇](PNG/HugeVision-SCM操作手册-00.实施说明篇/indexprivate.md)|
-实施手册|10.业务规则篇|HugeVision-SCM提供的系统功能体系所基于的业务规则|[10.业务规则篇](PNG/HugeVision-SCM操作手册-10.业务规则篇/indexprivate.md)|
-实施手册|20.业务流程篇|HugeVision-SCM各功能模块的系统流程|[20.业务流程篇](PNG/HugeVision-SCM操作手册-20.业务流程篇/indexprivate.md)|
-实施手册|50.系统设计篇|HugeVision-SCM的功能设计和非功能设计方案|[50.系统设计篇](PNG/HugeVision-SCM操作手册-50.系统设计篇/indexprivate.md)|
-运维手册|00.运维说明篇|HugeVision-SCM运维方法的整体说明，包括运维体制、运维流程、运维工具|[00.运维说明篇](PNG/HugeVision-SCM操作手册-00.基本操作篇/indexprivate.md)|
+实施手册|00.实施说明篇|HugeVision-SCM实施导入的方法、流程和管理工具|[00.实施说明篇](PNG/HugeVision-SCM实施手册-00.实施说明篇/indexformal.md)|
+实施手册|10.业务规则篇|HugeVision-SCM提供的系统功能体系所基于的业务规则|[10.业务规则篇](PNG/HugeVision-SCM实施手册-10.业务规则篇/indexprivate.md)|
+实施手册|20.业务流程篇|HugeVision-SCM各功能模块的系统流程|[20.业务流程篇](PNG/HugeVision-SCM实施手册-20.业务流程篇/indexprivate.md)|
+实施手册|50.系统设计篇|HugeVision-SCM的功能设计和非功能设计方案|[50.系统设计篇](PNG/HugeVision-SCM实施手册-50.系统设计篇/indexprivate.md)|
+运维手册|00.运维说明篇|HugeVision-SCM运维方法的整体说明，包括运维体制、运维流程、运维工具|[00.运维说明篇](PNG/HugeVision-SCM运维手册-00.基本操作篇/indexprivate.md)|
