--- a/manuals/正式版入口.md
+++ b/manuals/正式版入口.md
@@ -18,4 +18,4 @@
 实施手册|10.业务规则篇|HugeVision-SCM提供的系统功能体系所基于的业务规则|[10.业务规则篇](PNG/HugeVision-SCM实施手册-10.业务规则篇/indexformal.md)|
 实施手册|20.业务流程篇|HugeVision-SCM各功能模块的系统流程|[20.业务流程篇](PNG/HugeVision-SCM实施手册-20.业务流程篇/indexformal.md)|
 实施手册|50.系统设计篇|HugeVision-SCM的功能设计和非功能设计方案|[50.系统设计篇](PNG/HugeVision-SCM实施手册-50.系统设计篇/indexformal.md)|
-运维手册|00.运维说明篇|HugeVision-SCM运维方法的整体说明，包括运维体制、运维流程、运维工具|[00.运维说明篇](PNG/HugeVision-SCM运维手册-00.基本操作篇/indexformal.md)|
+运维手册|00.运维说明篇|HugeVision-SCM运维方法的整体说明，包括运维体制、运维流程、运维工具|[00.运维说明篇](PNG/HugeVision-SCM运维手册-00.运维说明篇/indexformal.md)|
