--- a/manuals/正式版入口.md
+++ b/manuals/正式版入口.md
@@ -19,4 +19,4 @@
 实施手册|20.业务流程篇|HugeVision-SCM各功能模块的系统流程|[20.业务流程篇](PNG/HugeVision-SCM实施手册-20.业务流程篇/indexformal.md)|
 实施手册|50.系统设计篇|HugeVision-SCM的功能设计和非功能设计方案|[50.系统设计篇](PNG/HugeVision-SCM实施手册-50.系统设计篇/indexformal.md)|
 运维手册|00.运维说明篇|HugeVision-SCM运维方法的整体说明，包括运维体制、运维流程、运维工具|[00.运维说明篇](PNG/HugeVision-SCM运维手册-00.运维说明篇/indexformal.md)|
-开发手册|API开发向导|与HugeVision-SCM API进行对接的开发方法说明|[API开发向导](../api.md)
+开发手册|API开发向导|与HugeVision-SCM API进行对接的开发方法说明|[API开发向导](../apiformal.md)
