--- a/manuals/正式版入口.md
+++ b/manuals/正式版入口.md
@@ -20,3 +20,8 @@
 实施手册|50.系统设计篇|HugeVision-SCM的功能设计和非功能设计方案|[50.系统设计篇](PNG/HugeVision-SCM实施手册-50.系统设计篇/indexformal.md)|
 运维手册|00.运维说明篇|HugeVision-SCM运维方法的整体说明，包括运维体制、运维流程、运维工具|[00.运维说明篇](PNG/HugeVision-SCM运维手册-00.运维说明篇/indexformal.md)|
 开发手册|API开发向导|与HugeVision-SCM API进行对接的开发方法说明|[API开发向导](../apiformal.md)
+开发手册|API功能列表|认证并获取Token|[TOKEN获取](../tokens/Tokens.md)
+开发手册|API功能列表|查询业务数据-同步-查询待处理发货单信息|[API09APDF](../processes/API09APDF.md)
+开发手册|API功能列表|创建业务数据-同步-创建库存调整单|[API170COF](../processes/API170COF.md)
+开发手册|API功能列表|创建业务数据-异步-创建库存调整单|[API170COB](../processes/API170COB.md)
+开发手册|API功能列表|查询异步处理结果-同步-查询库存调整单的异步处理结果|[API170NNF](../processes/API170NNF.md)
