--- a/manuals/正式版入口.md
+++ b/manuals/正式版入口.md
@@ -1,22 +1,73 @@
 
-# HugeVision-SCM Manual
+# HugeVision-SCM Documentation
+
+<span id="0"></span>
+
+### **HugeVision-SCM 文档构成**
+
+##### 点击跳转到相关章节，点击章节名旁边的⇑返回文档构成
+
+[☞HugeVision-SCM API 开发手册](#1)<br>
+[☞HugeVision-SCM 操作手册](#2)<br>
+[☞HugeVision-SCM 实施手册](#3)<br>
+[☞HugeVision-SCM 运维手册](#4)<br>
 
 
-|手册类别|名称|概述|文档链接|
-|:--|:--|:---|:--|
-操作手册|00.基本操作篇|HugeVision-SCM的各功能的共通操作方法|[00.基本操作篇](PNG/HugeVision-SCM操作手册-00.基本操作篇/indexformal.md)|
-操作手册|10.初期配置篇|在HugeVision-SCM进行初期配置，为正式运用系统做准备的方法|[10.初期配置篇](PNG/HugeVision-SCM操作手册-10.初期配置篇/indexformal.md)|
-操作手册|20.主数据篇|在HugeVision-SCM维护常用主数据(如业务伙伴、产品、价格等)的方法|[20.主数据篇](PNG/HugeVision-SCM操作手册-20.主数据篇/indexformal.md)|
-操作手册|30.采购篇|在HugeVision-SCM维护采购订单、执行收货、开票结算和付款的方法|[30.采购篇](PNG/HugeVision-SCM操作手册-30.采购篇/indexformal.md)|
-操作手册|40.销售篇|在HugeVision-SCM维护销售订单、执行发货、开票结算和收款的方法|[40.销售篇](PNG/HugeVision-SCM操作手册-40.销售篇/indexformal.md)|
-操作手册|50.库存篇|在HugeVision-SCM维护移库、盘点、调整、生产等库存类单据的方法|[50.库存篇](PNG/HugeVision-SCM操作手册-50.库存篇/indexformal.md)|
-操作手册|60.CRM篇|描在HugeVision-SCM管理渠道、线索、销售机会，维护服务/活动的方法|[60.CRM篇](PNG/HugeVision-SCM操作手册-60.CRM篇/indexformal.md)|
-操作手册|100.代理商篇|在HugeVision-SCM进行代理商单据协同管理的方法<br>(代理商的订购申请、采购、收货、结算，代理商的库存管理，代理商SellOut管理)|[100.代理商篇](PNG/HugeVision-SCM操作手册-100.代理商篇/indexformal.md)|
-操作手册|200.供应商篇|在HugeVision-SCM进行供应商单据协同管理的方法<br>(供应商的询价报价、供应商的销售、发货、结算，供应商的库存管理)|[200.供应商篇](PNG/HugeVision-SCM操作手册-200.供应商篇/indexformal.md)|
+<span id="1"></span>
+
+### **HugeVision-SCM API 开发手册** [⇑](#0)
+
+✓HugeVision-SCM API是赋能连接与协同的开放接口<br>
+✓服务使用方的其他系统(后称"外部系统")可以使用API接口与HugeVision-SCM平台进行数据交互和业务协同<br>
+
+|名称|概述|文档链接|
+|:--|:--|:---|
+API开发向导|与HugeVision-SCM API进行对接的开发方法说明|[API开发向导](../apiformal.md)
+
+<span id="2"></span>
+
+### **HugeVision-SCM 操作手册** [⇑](#0)
+
+✓HugeVision-SCM 操作手册是面向HugeVision-SCM服务使用方的用户发布的操作说明<br>
+✓《00.基本操作篇》是必读文档<br>
+✓用户可根据租约版本、功能模块、角色权限等，选择阅读其他文档，以便正确、高效地使用系统功能<br>
+
+|名称|概述|文档链接|
+|:--|:--|:---|
+00.基本操作篇|HugeVision-SCM的各功能的共通操作方法|[00.基本操作篇](PNG/HugeVision-SCM操作手册-00.基本操作篇/indexformal.md)|
+10.初期配置篇|在HugeVision-SCM进行初期配置，为正式运用系统做准备的方法|[10.初期配置篇](PNG/HugeVision-SCM操作手册-10.初期配置篇/indexformal.md)|
+20.主数据篇|在HugeVision-SCM维护常用主数据(如业务伙伴、产品、价格等)的方法|[20.主数据篇](PNG/HugeVision-SCM操作手册-20.主数据篇/indexformal.md)|
+30.采购篇|在HugeVision-SCM维护采购订单、执行收货、开票结算和付款的方法|[30.采购篇](PNG/HugeVision-SCM操作手册-30.采购篇/indexformal.md)|
+40.销售篇|在HugeVision-SCM维护销售订单、执行发货、开票结算和收款的方法|[40.销售篇](PNG/HugeVision-SCM操作手册-40.销售篇/indexformal.md)|
+50.库存篇|在HugeVision-SCM维护移库、盘点、调整、生产等库存类单据的方法|[50.库存篇](PNG/HugeVision-SCM操作手册-50.库存篇/indexformal.md)|
+60.CRM篇|描在HugeVision-SCM管理渠道、线索、销售机会，维护服务/活动的方法|[60.CRM篇](PNG/HugeVision-SCM操作手册-60.CRM篇/indexformal.md)|
+100.代理商篇|在HugeVision-SCM进行代理商单据协同管理的方法<br>(代理商的订购申请、采购、收货、结算，代理商的库存管理，代理商SellOut管理)|[100.代理商篇](PNG/HugeVision-SCM操作手册-100.代理商篇/indexformal.md)|
+200.供应商篇|在HugeVision-SCM进行供应商单据协同管理的方法<br>(供应商的询价报价、供应商的销售、发货、结算，供应商的库存管理)|[200.供应商篇](PNG/HugeVision-SCM操作手册-200.供应商篇/indexformal.md)|
 操作手册|900.API篇|在HugeVision-SCM维护API协同平台，管理跟踪API接口执行状态的方法|[900.API篇](PNG/HugeVision-SCM操作手册-900.API篇/indexformal.md)|
-实施手册|00.实施说明篇|HugeVision-SCM实施导入的方法、流程和管理工具|[00.实施说明篇](PNG/HugeVision-SCM实施手册-00.实施说明篇/indexformal.md)|
-实施手册|10.业务规则篇|HugeVision-SCM提供的系统功能体系所基于的业务规则|[10.业务规则篇](PNG/HugeVision-SCM实施手册-10.业务规则篇/indexformal.md)|
-实施手册|20.业务流程篇|HugeVision-SCM各功能模块的系统流程|[20.业务流程篇](PNG/HugeVision-SCM实施手册-20.业务流程篇/indexformal.md)|
-实施手册|50.系统设计篇|HugeVision-SCM的功能设计和非功能设计方案|[50.系统设计篇](PNG/HugeVision-SCM实施手册-50.系统设计篇/indexformal.md)|
-运维手册|00.运维说明篇|HugeVision-SCM运维方法的整体说明，包括运维体制、运维流程、运维工具|[00.运维说明篇](PNG/HugeVision-SCM运维手册-00.运维说明篇/indexformal.md)|
-开发手册|API开发向导|与HugeVision-SCM API进行对接的开发方法说明|[API开发向导](../apiformal.md)
+
+<span id="3"></span>
+
+### **HugeVision-SCM 实施手册**[⇑](#0)
+
+✓HugeVision-SCM 操作手册是面向HugeVision-SCM服务使用方和系统实施人员发布的实施说明<br>
+✓《00.实施说明篇》帮助首次使用HugeVision-SCM服务的使用方正确收集业务数据并配置到系统中，完成业务和数据的移行/切换，开始HugeVision-SCM的正式运用<br>
+✓《10.业务规则篇》、《20.业务流程篇》、《50.系统设计篇》帮助服务使用方和系统实施人员从系统功能性/非功能设计方面，系统功能体系构成的前提和基础方面全方位地理解HugeVision-SCM<br>
+
+|名称|概述|文档链接|
+|:--|:--|:---|
+00.实施说明篇|HugeVision-SCM实施导入的方法、流程和管理工具|[00.实施说明篇](PNG/HugeVision-SCM实施手册-00.实施说明篇/indexformal.md)|
+10.业务规则篇|HugeVision-SCM提供的系统功能体系所基于的业务规则|[10.业务规则篇](PNG/HugeVision-SCM实施手册-10.业务规则篇/indexformal.md)|
+20.业务流程篇|HugeVision-SCM各功能模块的系统流程|[20.业务流程篇](PNG/HugeVision-SCM实施手册-20.业务流程篇/indexformal.md)|
+50.系统设计篇|HugeVision-SCM的功能设计和非功能设计方案|[50.系统设计篇](PNG/HugeVision-SCM实施手册-50.系统设计篇/indexformal.md)|
+
+<span id="4"></span>
+
+### **HugeVision-SCM 运维手册** [⇑](#0)
+
+✓HugeVision-SCM 操作手册是面向HugeVision-SCM服务使用方和系统运维人员发布的运维说明<br>
+✓服务使用方与提供方需持续性地互相配合推进运维工作，确保系统正常稳定运营
+
+|名称|概述|文档链接|
+|:--|:--|:---|
+00.运维说明篇|HugeVision-SCM运维方法的整体说明，包括运维体制、运维流程、运维工具|[00.运维说明篇](PNG/HugeVision-SCM运维手册-00.运维说明篇/indexformal.md)|
+
